usernameをnameに修正
